# Quarry_bridge

./: pyproject.toml  requirements.txt  social_network.sql
Quarry_bridge/config/: asgi.py  settings.py  urls.py  wsgi.py
