[tool.poetry]
name = "quarry_bridge"
version = "0.1.0"
description = "Social network by Django"
authors = ["Volume632 <zakgleb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
